force-app/main/default/objects/Contato__c/Contato__c.object-meta.xml
<CustomObject>
    <label>Contato</label>
    <nameField>
        <label>Contato Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contatos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>