force-app/main/default/objects/Contato__c/fields/Sobrenome__c.field-meta.xml
<CustomField>
    <fullName>Sobrenome__c</fullName>
    <label>Sobrenome</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>