force-app/main/default/objects/Contato__c/fields/Telefone_Celular__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Celular__c</fullName>
    <label>Telefone Celular</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>