force-app/main/default/objects/Contato__c/fields/Telefone_Fixo__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Fixo__c</fullName>
    <label>Telefone Fixo</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>